- added chart function to site - minor code revisions on other routes - lazyloading for large charts - changed API /item/ to /items/ to not conflict with site /item - more accurate ranking of mods - general code cleanup - refresh interval down to every 3 hours

--- a/ModRank/views/compare.jade
+++ b/ModRank/views/compare.jade
@@ -44,7 +44,7 @@ block content
                             p.margin-no-bottom= comp.views
                             p.margin-no-top= "#" + comp.viewsRank + " | " + comp.viewsPercent + "%"
             else
-                li.list-group-item.bg-danger.text-black
+                li.list-group-item.bg-success.text-black
                     .row
                         .col-lg-2.col-md-1.margin-auto
                             a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + comp.id))
