--- a/ModRank/views/chart.jade
+++ b/ModRank/views/chart.jade
@@ -1,23 +1,32 @@
 extends layout
 
+mixin listItem(comp)
+    a(href=('/item?id=' + comp.id))
+        .row
+            .col-2.margin-auto= '#' + comp.rank
+            .col-sm-2.margin-auto.d-none.d-sm-block
+                img(data-src=comp.img).img-fluid.lazy
+            .col-6.margin-auto= comp.name + ' (' + comp.id + ')'
+            .col-2.margin-auto= comp.hits
+
 block content
     .row
-        .col-sm-6.margin-auto
-            h1.cover-heading= 'Rimworld ' + title
+        .col.col-md-8.margin-auto(style='margin-top:50px')
+            h1= 'Rimworld ' + title
     .row
-        .col-sm-12.margin-auto(style='margin-top:50px')
+        .col-sm-12.margin-auto(style='margin-top:20px')
             form(method='GET' action=('/chart?cat=' + name)).margin-auto
                 .form-group
                     label Get More Results:
+                    input#id.form-control(name='cat' value=name hidden)
                     .row
                         .col-sm-3
-                            input#id.form-control(name='cat' value=name hidden)
                         .col-sm-2
                             input#id.form-control(type='number', name='from' placeholder='From:' min='1' max=chart.length required)
                         .col-sm-2
                             input#id.form-control(type='number', name='to' placeholder='To:' min='0' max=chart.length required)
                         .col-sm-2
-                            button.btn.btn-primary.rounded-0.rounded-left(type='submit', style='width:100%') Search
+                            button.btn.btn-primary.rounded(type='submit', style='width:100%') Search
                     label (type 0 in the To box to get all results after From)
             hr.bg-white
         .clearfix
@@ -27,19 +36,7 @@ block content
                     if(index >= from - 1 && index < to)
                         if(index % 2 === 0)
                             li.list-group-item.bg-info
-                                a(href=('/item?id=' + comp.id))
-                                    .row
-                                        .col-sm-2.margin-auto= '#' + comp.rank
-                                        .col-sm-2.margin-auto
-                                            img(data-original=comp.img).img-fluid.lazy
-                                        .col-sm-6.margin-auto= comp.name + ' (' + comp.id + ')'
-                                        .col-sm-2.margin-auto= comp.hits
+                                +listItem(comp)
                         else
                             li.list-group-item.bg-success
-                                a(href=('/item?id=' + comp.id))
-                                    .row
-                                        .col-sm-2.margin-auto= '#' + comp.rank
-                                        .col-sm-2.margin-auto
-                                            img(data-original=comp.img).img-fluid.lazy
-                                        .col-sm-6.margin-auto= comp.name + ' (' + comp.id + ')'
-                                        .col-sm-2.margin-auto= comp.hits
+                                +listItem(comp)
