--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -1,64 +1,53 @@
 doctype html
 
-html
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
-    link(rel='stylesheet', href='/vendor/Bootstrap/css/bootstrap.min.css')
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='icon', href='/images/mr.png')
 
   body
-    .site-wrapper
-        .site-wrapper-inner
-            .cover-container
-                .masthead
-                    .inner
-                        a(href='/')
-                            h3.masthead-brand
-                                img(src='/images/mr.png' alt='RW-MR' style='max-height:40px').img-fluid
-                        nav
-                            .row
-                                ul.nav.masthead-nav(style='margin-left:auto')
-                                    li
-                                        h5
-                                            a(href='/') Search
-                                    li
-                                        h5
-                                            a(href='/compare') Compare
-                                    li
-                                        h5
-                                            a(href='/item?id=random') Random
-                                    li
-                                        h5
-                                            a(href='/compare?id1=random&id2=random') Random Matchup
-                            .row
-                                ul.nav.masthead-nav(style='margin-left:auto')
-                                    li
-                                        h6
-                                            a(href='/chart?cat=subs') Most Subscribed
-                                    li
-                                        h6
-                                            a(href='/chart?cat=favs') Most Favorited
-                                    li
-                                        h6
-                                            a(href='/chart?cat=comments') Most Commented
-                                    li
-                                        h6
-                                            a(href='/chart?cat=views') Most Viewed
-                                    li
-                                        h6
-                                            a(href='/chart?cat=unsubs') Most Unsubscribed
-                            .clearfix
-                .inner.cover
-                  block content
-                .mastfoot
-                  .inner
-                    em Data may be up to 3 hours old*
-                    //p &copy; Nick Fisher 2017
+    nav.navbar.navbar-expand-md.navbar-dark.bg-dark
+        a.navbar-brand(href='/')
+            img(src='/images/mr.png' alt='RW-MR' style='max-height:40px').img-fluid
+        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation")                    
+            span.navbar-toggler-icon
+        .collapse.navbar-collapse(id='navbarsExampleDefault')
+            ul.navbar-nav.mr-auto
+                li.nav-item
+                    a.nav-link(href='/') Home
+                li.nav-item
+                    a.nav-link(href='/compare') Compare
+                li.nav-item
+                    a.nav-link(href='/item?id=random') Random
+                li.nav-item
+                    a.nav-link(href='/compare?id1=random&id2=random') Random Matchup
+                li.nav-item.dropdown
+                    a.nav-link.dropdown-toggle(href='#' id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Charts
+                    .dropdown-menu(aria-labelledby="dropdown01")
+                        a.dropdown-item(href='/chart?cat=subs') Subscriptions
+                        a.dropdown-item(href='/chart?cat=favs') Favorites
+                        a.dropdown-item(href='/chart?cat=comments') Comments
+                        a.dropdown-item(href='/chart?cat=views') Views
+                        a.dropdown-item(href='/chart?cat=unsubs') Unsubscriptions
+            form.form-inline.my-2.my-lg-0(action="/item")
+                input.form-control.mr-sm-2(type="text" placeholder="Search with Steam ID" name="id" aria-label="Search")
+                button.btn.btn-info.btn-outline-white.my-2.my-sm-0(type="submit") Search
+    .container
+        block content
+    footer
+        hr
+        em Data may be up to 3 hours old*
+        //p &copy; Nick Fisher 2017
 
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js')
-    script(src='/vendor/Bootstrap/js/bootstrap.min.js')
-    script(src='/javascripts/analytics.js')
-    script $("img.lazy").lazyload();
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+    script(src="/javascripts/lazyload.js")
+    script(src="/javascripts/layout.js")
+    script(src='/javascripts/analytics.js' async)
+    script $(function() {$('img.lazy').lazyload(); console.log('cool')});
