--- a/ModRank/views/compare.jade
+++ b/ModRank/views/compare.jade
@@ -2,10 +2,7 @@
 
 mixin listItem(comp)
     .row
-        .col-lg-2.col-sm-1.margin-auto.d-none.d-sm-block
-            a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + comp.id))
-                img.img-fluid(src=comp.img alt=comp.itemTitle)
-        .col-sm-3.col-lg-2.margin-auto
+        .col-sm-4.col-lg-2.margin-auto
             a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + comp.id))
                 h4.text-black= comp.itemTitle
         .col-4.d-sm-none
@@ -32,6 +29,9 @@ mixin listItem(comp)
         .col-8.col-sm-2.margin-auto
             p.margin-no-bottom= comp.views
             p.margin-no-top= "#" + comp.viewsRank + " | " + comp.viewsPercent + "%"
+        .col-lg-2.d-none.d-lg-block.margin-auto
+            p.margin-no-bottom= comp.unsubscribes + '%'
+            p.margin-no-top= "#" + comp.unsubscribesRank + " | " + comp.unsubscribesPercent + "%"
 
 block content
   h1 ModRank Comparison
@@ -39,11 +39,11 @@ block content
   ul.list-group
     li.list-group-item.bg-warning.d-none.d-sm-block
         .row
-            .col-sm-4
+            .col-sm-4.col-lg-2
                 h1 Item
             .col-sm-2
                 h1
-                    i.fa.fa-download.fa-2(aria-hidden="true")
+                    i.fa.fa-times.fa-download.fa-2(aria-hidden="true")
             .col-sm-2
                 h1
                     i.fa.fa-star.fa-2(aria-hidden="true")
@@ -53,6 +53,9 @@ block content
             .col-sm-2
                 h1
                     i.fa.fa-eye.fa-2(aria-hidden="true")
+            .col-lg-2.d-none.d-lg-block
+                h1
+                    i.fa.fa-times.fa-2(aria-hidden="true")
     if (comps.length > 0)
         each comp, index in comps
             if(index % 2 == 0) 
