--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,11 +29,11 @@ html(lang='en')
                 li.nav-item.dropdown
                     a.nav-link.dropdown-toggle(href='#' id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Charts
                     .dropdown-menu(aria-labelledby="dropdown01")
-                        a.dropdown-item(href='/chart?cat=subs') Subscriptions
-                        a.dropdown-item(href='/chart?cat=favs') Favorites
+                        a.dropdown-item(href='/chart?cat=subscriptions') Subscriptions
+                        a.dropdown-item(href='/chart?cat=favorites') Favorites
                         a.dropdown-item(href='/chart?cat=comments') Comments
                         a.dropdown-item(href='/chart?cat=views') Views
-                        a.dropdown-item(href='/chart?cat=unsubs') Unsubscriptions
+                        a.dropdown-item(href='/chart?cat=unsubscribes') Unsubscriptions
             form.form-inline.my-2.my-lg-0(action="/item")
                 input.form-control.mr-sm-2(type="text" placeholder="Search with Steam ID" name="id" aria-label="Search")
                 button.btn.btn-info.btn-outline-white.my-2.my-sm-0(type="submit") Search
